# task-manager-web-app

./: .dockerignore  .gitignore  Dockerfile  cloudbuild.yaml  main.py  pyproject.toml  render.yaml  requirements.txt
api/: app_lifespans.py  auth.py  compress_profile_img.py  config.py  sys_log.py  users.py  utils.py
api/db/: ca.pem  database.py  redis_backend.py
api/routes/: auth_router.py  projects_router.py  tasks_router.py  users_router.py
src/: app_lifespans.py  auth.py  config.py  sys_log.py  users.py  utils.py
src/db/: __init__.py  database.py  redis.py  redis_backend.py
src/models/: entities.py
src/routes/: auth_router.py  projects_router.py  tasks_router.py  users_router.py
