[project]
name = "tasker-api"
version = "0.1.0"
description = "FastAPI Task Manager Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.14",
    "uvicorn==0.35.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "fastapi-camelcase==2.0.0", 
    "redis==6.2.0",             
    "cryptography",
    "email-validator>=2.0.0",
    "python-dotenv",
    "python-multipart",
    "asyncmy",
    "mysql-connector-python",
    "PyJWT",
    "passlib[bcrypt]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"