[project]
name = "tasker-api"
version = "0.1.0"
description = "FastAPI Task Manager Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.14",
    "uvicorn==0.35.0",
    "starlette==0.46.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv==1.1.1",
    "pyhumps==3.8.0",
    "fastapi-camelcase==2.0.0",
    "mysql-connector-python==9.3.0",
    "asyncmy==0.2.10",
    "redis==6.2.0",
    "aioredis==2.0.1",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "PyJWT==2.10.1",
    "cryptography==46.0.3",
    "bcrypt==4.0.1",
    "python-multipart==0.0.20",
    "email-validator==2.3.0",
    "python-json-logger==3.3.0",
    "httpx==0.28.1",
    "requests==2.32.4",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "certifi==2025.6.15",
    "urllib3==2.5.0",
    "typing_extensions==4.14.0",
    "anyio==4.9.0",
    "sniffio==1.3.1",
    "idna==3.10",
    "h11==0.16.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"